...
            android:id="@+id/listPlan"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/getDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get Directions"
        android:onClick="openDirections"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

...
